--- a/traffic-be/data-process/test.ipynb
+++ b/traffic-be/data-process/test.ipynb
@@ -14,160 +14,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            CP     S Ref E     S Ref N  S Ref Latitude  \\\n",
-      "AADFYear Road_short                                                      \n",
-      "2000     A           768697661  7041779786  5597397849   886492.142843   \n",
-      "         M            44198712   367880715   309975559    48290.004536   \n",
-      "2001     A           770288552  7041686918  5597687944   886644.125441   \n",
-      "         M            44928374   370480676   314096580    48726.281631   \n",
-      "2002     A           772047857  7048959746  5604221363   887551.040063   \n",
-      "         M            45108776   371406586   314699230    48831.477967   \n",
-      "2003     A           771931186  7041550829  5598938511   886655.354945   \n",
-      "         M            45108776   371406586   314699230    48831.477967   \n",
-      "2004     A           776232709  7054604847  5610575272   888207.049640   \n",
-      "         M            47252560   381234570   322658787    50150.591616   \n",
-      "2005     A           788532127  7096055589  5652292081   893221.913148   \n",
-      "         M            47543937   383115853   323873906    50361.091301   \n",
-      "2006     A           793222115  7112985940  5665576439   895187.189236   \n",
-      "         M            49653776   389391563   338635208    51690.907597   \n",
-      "2007     A           794503677  7111472988  5664924428   895181.544242   \n",
-      "         M            49653776   389391563   338635208    51690.907597   \n",
-      "2008     A           794884180  7100934195  5658265579   894124.005672   \n",
-      "         M            49653776   389389745   338635080    51690.906089   \n",
-      "2009     A           798656378  7116724446  5673620303   896257.925080   \n",
-      "         M            50049299   390886055   340178961    51904.385884   \n",
-      "2010     A           797609131  7108246195  5667431199   895204.417043   \n",
-      "         M            50040259   390439753   339912472    51852.080104   \n",
-      "2011     A           802047886  7103459113  5665407071   894587.362853   \n",
-      "         M            49599739   387602248   334941943    51358.410634   \n",
-      "2012     A           806979868  7118676608  5681361471   896776.132040   \n",
-      "         M            55069968   406513371   377485735    55082.952399   \n",
-      "2013     A           810412045  7125133364  5693070069   897978.656493   \n",
-      "         M            55361272   407358243   379537578    55251.056469   \n",
-      "2014     A           814022295  7137153382  5693508123   899229.702609   \n",
-      "         M            56849443   412153868   382985034    55880.853197   \n",
-      "2015     A           816976390  7139097400  5690812817   899205.169253   \n",
-      "         M            57013005   412719404   382910536    55930.103450   \n",
-      "2016     A           821753198  7152695040  5694471777   900585.362757   \n",
-      "         M            57692183   414314765   385138850    56199.665167   \n",
-      "\n",
-      "                     S Ref Longitude    LenNet  LenNet_miles     FdPC  \\\n",
-      "AADFYear Road_short                                                     \n",
-      "2000     A             -28993.768755  46855.09      29109.38  1636303   \n",
-      "         M              -1806.657810   3213.09       1996.26        0   \n",
-      "2001     A             -29019.323674  46897.89      29135.96  1679187   \n",
-      "         M              -1831.568261   3228.29       2005.72        0   \n",
-      "2002     A             -29047.184728  46918.89      29148.91  1648720   \n",
-      "         M              -1833.781613   3230.19       2006.91       38   \n",
-      "2003     A             -29021.787826  46897.85      29135.85  1844544   \n",
-      "         M              -1833.781613   3230.19       2006.91       26   \n",
-      "2004     A             -29058.617455  46913.55      29145.67  1738097   \n",
-      "         M              -1886.270146   3275.49       2035.07        5   \n",
-      "2005     A             -29184.489162  46968.54      29179.93  1866402   \n",
-      "         M              -1890.171384   3274.59       2034.50        0   \n",
-      "2006     A             -29228.393082  47033.76      29220.49  2333227   \n",
-      "         M              -1990.934306   3295.94       2047.76      228   \n",
-      "2007     A             -29250.067488  46998.27      29198.38  1953937   \n",
-      "         M              -1990.934306   3295.74       2047.63      142   \n",
-      "2008     A             -29246.842699  46944.27      29164.79  2144871   \n",
-      "         M              -1990.960464   3295.44       2047.44      163   \n",
-      "2009     A             -29331.135119  47022.20      29213.19  2242944   \n",
-      "         M              -2000.524799   3296.40       2048.02      163   \n",
-      "2010     A             -29297.534911  46942.60      29163.75  2328342   \n",
-      "         M              -1999.285649   3311.40       2057.33        0   \n",
-      "2011     A             -29273.674148  46978.50      29186.10  2372214   \n",
-      "         M              -1969.175222   3314.70       2059.40        0   \n",
-      "2012     A             -29375.191411  47000.62      29199.89  2306928   \n",
-      "         M              -2230.046710   3362.57       2089.19        0   \n",
-      "2013     A             -29455.802541  47026.89      29216.21  2258410   \n",
-      "         M              -2241.737622   3363.67       2089.89        9   \n",
-      "2014     A             -29475.826347  47062.68      29238.47  2385195   \n",
-      "         M              -2265.754387   3367.27       2092.12        0   \n",
-      "2015     A             -29447.883788  47063.74      29239.10  2448372   \n",
-      "         M              -2265.149300   3365.83       2091.22        0   \n",
-      "2016     A             -29458.943360  47096.54      29259.45  2828869   \n",
-      "         M              -2281.156837   3368.13       2092.64        0   \n",
-      "\n",
-      "                      Fd2WMV      FdCar    FdBUS     FdLGV  FdHGVR2  FdHGVR3  \\\n",
-      "AADFYear Road_short                                                            \n",
-      "2000     A           3701104  241907801  4013921  31273086  7250928  1125231   \n",
-      "         M            284210   47508180   373888   6684875  2259215   305919   \n",
-      "2001     A           3891391  244284640  4056205  31780081  7036941  1185601   \n",
-      "         M            295092   49324627   367221   7014662  2246487   325660   \n",
-      "2002     A           3839191  246723470  4105553  32042026  7003313  1145795   \n",
-      "         M            286725   50581715   342509   7216707  2265642   328004   \n",
-      "2003     A           4309452  245446124  4055450  34009526  7005865  1135773   \n",
-      "         M            306991   50552866   335515   7450328  2257787   329091   \n",
-      "2004     A           3957829  247850179  3838372  34847329  7278401  1166659   \n",
-      "         M            283991   52480798   311157   8058375  2354556   349508   \n",
-      "2005     A           3860108  246089909  3848529  35904340  7248670  1145828   \n",
-      "         M            297532   52672199   327905   8309551  2269153   344279   \n",
-      "2006     A           3977088  248551512  3984230  37600429  7099019  1127261   \n",
-      "         M            313400   53692507   384708   8840110  2257637   361256   \n",
-      "2007     A           3911676  244532464  3910702  39478357  6874870  1124424   \n",
-      "         M            311566   54033364   347043   9157432  2207151   364882   \n",
-      "2008     A           3716698  240769479  3820508  38826515  6624813  1186793   \n",
-      "         M            321225   53599164   346658   8872425  2207279   359586   \n",
-      "2009     A           3620991  243338042  3870617  37624341  6076171  1103728   \n",
-      "         M            317633   54861606   323168   8839384  2169735   332259   \n",
-      "2010     A           3378545  240569708  3992540  37310585  6154915  1058542   \n",
-      "         M            304700   53784357   328674   8716356  2274682   324015   \n",
-      "2011     A           3319451  239842494  3937341  38118340  5873631  1109731   \n",
-      "         M            290581   54539145   316450   9120641  1943554   355876   \n",
-      "2012     A           3145578  237362516  4026578  38037152  5644766  1126468   \n",
-      "         M            277449   56143858   311864   9720660  1850683   376531   \n",
-      "2013     A           3137168  236348779  3976303  38834818  5448018  1159160   \n",
-      "         M            284673   56398119   318046  10130596  1783736   389580   \n",
-      "2014     A           3244588  239173417  3945708  41125134  5437631  1165659   \n",
-      "         M            276056   57607524   302810  10673501  1890339   368981   \n",
-      "2015     A           3220448  241667625  3981917  42712423  5511150  1191578   \n",
-      "         M            278321   58354134   277950  11110044  2034442   385595   \n",
-      "2016     A           3359550  244544577  3916688  43765660  5306770  1077943   \n",
-      "         M            275489   59407185   268096  11727508  2024315   365887   \n",
-      "\n",
-      "                     FdHGVR4  FdHGVA3  FdHGVA5  FdHGVA6     FdHGV   FdAll_MV  \n",
-      "AADFYear Road_short                                                           \n",
-      "2000     A            999280  1230089  2559946  1747770  14913244  295809156  \n",
-      "         M            295655   851183  2380475  1367777   7460224   62311377  \n",
-      "2001     A           1003321  1121499  2415454  1909414  14672230  298684547  \n",
-      "         M            301516   794228  2340894  1511924   7520709   64522311  \n",
-      "2002     A           1043368  1068276  2349177  2056720  14666649  301376889  \n",
-      "         M            307167   744945  2335521  1593648   7574927   66002583  \n",
-      "2003     A           1103779  1036094  2291006  2177073  14749590  302570141  \n",
-      "         M            305790   692483  2293655  1638790   7517596   66163296  \n",
-      "2004     A           1207294  1005782  2270630  2298485  15227251  305720960  \n",
-      "         M            334074   696341  2438782  1822555   7995816   69130137  \n",
-      "2005     A           1237170   915366  2243294  2350441  15140769  304843655  \n",
-      "         M            339003   622266  2410845  1888842   7874388   69481575  \n",
-      "2006     A           1269216   869252  2256347  2478064  15099158  309212414  \n",
-      "         M            351769   572423  2480224  1926383   7949692   71180417  \n",
-      "2007     A           1336337   811177  2322475  2538772  15008055  306841254  \n",
-      "         M            365749   521303  2466781  2085463   8011329   71860734  \n",
-      "2008     A           1324694   757382  2282206  2496641  14672531  301805731  \n",
-      "         M            372126   448795  2400828  2036758   7825372   70961888  \n",
-      "2009     A           1159188   689390  2123176  2319745  13471398  301925389  \n",
-      "         M            351003   389745  2243194  1934113   7420049   71761840  \n",
-      "2010     A           1050652   741378  2046541  2358675  13410703  298662081  \n",
-      "         M            338797   408111  2131410  2161914   7638929   70773016  \n",
-      "2011     A           1142763   587900  1987070  2614124  13315219  298532845  \n",
-      "         M            353164   303524  1736943  2624926   7317987   71584804  \n",
-      "2012     A           1206145   507226  1959056  2642765  13085846  295657482  \n",
-      "         M            341403   317006  1710783  2809731   7406102   73859921  \n",
-      "2013     A           1305666   435634  1812329  2910673  13070823  295367996  \n",
-      "         M            356638   270493  1493826  3175052   7469308   74600796  \n",
-      "2014     A           1340145   488836  1929396  2850825  13212529  300701308  \n",
-      "         M            364393   306569  1786475  3085504   7802256   76662136  \n",
-      "2015     A           1322985   604857  2023140  2928565  13582212  305164734  \n",
-      "         M            364324   368761  1808390  3177104   8138596   78159057  \n",
-      "2016     A           1380701   550987  2043437  3052292  13412007  308998408  \n",
-      "         M            394898   321599  1716954  3374574   8198212   79876498  \n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/yuanzhenkun/Code/code_test/code-traffic/traffic-be/data-process/test.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuanzhenkun/Code/code_test/code-traffic/traffic-be/data-process/test.ipynb#ch0000001?line=0'>1</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mRoad_short\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: x[\u001b[39m'\u001b[39m\u001b[39mRoad\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuanzhenkun/Code/code_test/code-traffic/traffic-be/data-process/test.ipynb#ch0000001?line=1'>2</a>\u001b[0m grouped\u001b[39m=\u001b[39mdf\u001b[39m.\u001b[39mgroupby([\u001b[39m'\u001b[39m\u001b[39mAADFYear\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mRoad_short\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39msum()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuanzhenkun/Code/code_test/code-traffic/traffic-be/data-process/test.ipynb#ch0000001?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(grouped)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
